@@ -1,5 +1,9 @@
 2008-10-22  Christian Persch  <chpe@gnome.org>
 
+	* gconf/gconftool-2.c: Add --search-key-regex; bug #557489.
+
+2008-10-22  Christian Persch  <chpe@gnome.org>
+
 	* defaults/gconf-defaults.c: (do_copy),
 	(gconf_defaults_unset_mandatory): Fix some 'format not a string
 	literal and no format arguments' warnings.
